# dll-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: library.cpp  library.h
test/: CMakeLists.txt  buildTest.cpp
